--- a/gb/17/9/14/n9631692.md
+++ b/gb/17/9/14/n9631692.md
@@ -1,56 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pxexow3039/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxexow3039/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxexow3039/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxexow3039/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pxexow3039/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pxexow3039/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pxexow3039/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pxexow3039/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>黑户宝宝近2万名？ 台内政部：仅543人</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年09月14日讯】（大纪元记者陈懿胜台湾台北报导）针对媒体报导推估台湾计有近2万名<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E9%BB%91%E6%88%B7%E5%AE%9D%E5%AE%9D.md#1">黑户宝宝</a>问题，内政部澄清，依新生儿出生通报筛滤结果，自2007年至2017年8月底，台湾有543人生母为行方不明外籍劳工或使用假身份，属非台湾籍的无依<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%84%BF%E5%B0%91.md#1">儿少</a>，政府已积极介入处理，解决其收出养、就学、就医及<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%9B%BD%E7%B1%8D.md#1">国籍</a><ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%BD%92%E5%8C%96.md#1">归化</a>等各项问题。</p>
-<p>内政部表示，为落实儿童权利公约保障非台湾本国无依<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%84%BF%E5%B0%91.md#1">儿少</a>权益，将这些儿少分成4大类，为生母为外国人，生父为国人者，由国人生父办理认领登记后取得<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%9B%BD%E7%B1%8D.md#1">国籍</a>；生母为外籍，生父为为外国人或不详，他们即与生父或生母具有相同之外国国籍，非属无国籍人。</p>
-<p>而生母及生父均无可考，依《国籍法》第2条规定，得认定为我国籍人；生父不详，生母为外国人，已出境或遭遣返回国、行方不明，将认定为无国籍人，后续由县市社政机关办理收养事宜，依《国籍法》申请<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E5%BD%92%E5%8C%96.md#1">归化</a>我国籍，目前已有14人获得收养。</p>
-<p>台湾内政部强调，政府已依法积极处理，<ahref="https://github.com/pxexow3039/djy/blob/master/gb/tag/%E9%BB%91%E6%88%B7%E5%AE%9D%E5%AE%9D.md#1">黑户宝宝</a>的身份权益问题都可获得解决。如果遇到类似个案，可向内政部或县市政府社政机关寻求协助，以得到妥适处理。</p>
+<p>【大纪元2017年09月14日讯】（大纪元记者陈懿胜台湾台北报导）针对媒体报导推估台湾计有近2万名<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%BB%91%E6%88%B7%E5%AE%9D%E5%AE%9D.md#1">黑户宝宝</a>问题，内政部澄清，依新生儿出生通报筛滤结果，自2007年至2017年8月底，台湾有543人生母为行方不明外籍劳工或使用假身份，属非台湾籍的无依<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%84%BF%E5%B0%91.md#1">儿少</a>，政府已积极介入处理，解决其收出养、就学、就医及<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9B%BD%E7%B1%8D.md#1">国籍</a><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BD%92%E5%8C%96.md#1">归化</a>等各项问题。</p>
+<p>内政部表示，为落实儿童权利公约保障非台湾本国无依<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%84%BF%E5%B0%91.md#1">儿少</a>权益，将这些儿少分成4大类，为生母为外国人，生父为国人者，由国人生父办理认领登记后取得<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9B%BD%E7%B1%8D.md#1">国籍</a>；生母为外籍，生父为为外国人或不详，他们即与生父或生母具有相同之外国国籍，非属无国籍人。</p>
+<p>而生母及生父均无可考，依《国籍法》第2条规定，得认定为我国籍人；生父不详，生母为外国人，已出境或遭遣返回国、行方不明，将认定为无国籍人，后续由县市社政机关办理收养事宜，依《国籍法》申请<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BD%92%E5%8C%96.md#1">归化</a>我国籍，目前已有14人获得收养。</p>
+<p>台湾内政部强调，政府已依法积极处理，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%BB%91%E6%88%B7%E5%AE%9D%E5%AE%9D.md#1">黑户宝宝</a>的身份权益问题都可获得解决。如果遇到类似个案，可向内政部或县市政府社政机关寻求协助，以得到妥适处理。</p>
 <p>责任编辑：吕美琪</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/10/1/1/n2773345.md#1">郑善：居民身份证不是公民证</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/11/3/31/n3214526.md#1">黑户身份难等  台移民署专案办理　</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/12/12/6/n3746672.md#1">外籍新生儿成黑户  纠正内政部</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/17/9/13/n9626314.md#1">新移民恐沦人球  民团组一九盟吁修国籍法</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/7/n12313100.md#1">分析蓬佩奥对华演讲 专家：美绥靖政策不再</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12311206.md#1">分析：美中南海一战 非空穴来风</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12311209.md#1">台教部不开放陆生来台 作家：问题在中共</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12311245.md#1">香港民主戏码 台学者：中共不演了</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12311258.md#1">美官员访台北京跳脚 台：中共是麻烦制造者</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/7/n12311835.md#1">侨委会推全球侨台商农业服务方案 童振源：创造四赢</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/1/1/n2773345.md#1">郑善：居民身份证不是公民证</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/3/31/n3214526.md#1">黑户身份难等  台移民署专案办理　</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/12/12/6/n3746672.md#1">外籍新生儿成黑户  纠正内政部</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/9/13/n9626314.md#1">新移民恐沦人球  民团组一九盟吁修国籍法</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740722.md#1">中共官媒刻意突显李克强？日媒：习近平已被架空</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740871.md#1">台政院修矿业法删霸王条款 新增原住民咨商同意</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740818.md#1">高铁完成转向架测试设备 获欧盟认证</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740822.md#1">台房市三箭缺两箭 民团吁政府实现承诺</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740828.md#1">台铁公司化协商仍未果 交长：应变计划已精致化</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740726.md#1">台立委：各县市筛检站 平均负荷量失衡</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/31/n9788740.md#1" target="_blank">高天韵：匈牙利“恐怖屋”的黑暗记录</a></li><li><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839741.md#1" target="_blank">【细语人生】见证大法的神奇（8）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/8/n10371607.md#1" target="_blank">共产党暴政录：三反五反运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20年前 澳洲西人为法轮功赴京上访（下）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12310914.md#1">去年刚断交 台援助防疫物资 竟遭索罗门政府扣留</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/5/n12309844.md#1">专访闫丽梦：爆料北京掩盖中共病毒</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/5/n12308101.md#1">中共肺炎疫情升温 陈时中：8大场所应戴口罩</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12310247.md#1">【拍案惊奇】黎巴嫩爆炸内幕深？共军缺钱4原因</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/4/n12305587.md#1">【内幕】中共秘而不宣的大连疫情分布图</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/4/n12306966.md#1">网爆“天王嫂训练营”潘玮柏郭富城被套路？</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/5/n12309278.md#1">宣布放弃华为代言 瑞典小天后拉尔森曝光原因</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/4/n12307256.md#1">探班只顾与高圆圆通话 赵又廷遭林更新戏说</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/4/n12306613.md#1">女星跟风贴黑白照撑女权 何韵诗斥选择性发声</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/6/n12310809.md#1">澎恰恰宣布破产 欠债2.4亿台币已还一半</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/2/n12301623.md#1">一个奇梦揭示鸦片膏在另外空间的表现</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/5/n12308038.md#1">马斯克说金字塔是外星人建的 埃及如此回应</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/2/n12300632.md#1">春秋时代一场陨石雨  天人感应预兆证验不爽？</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/20/8/3/n12302128.md#1">【涛哥侃封神】第四回 恩州驿狐狸死妲己</a></li>
-<li><a href="https://github.com/pxexow3039/djy/blob/master/gb/11/1/4/n3132040.md#1">巴洛克艺术（二）卡拉瓦乔</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pxexow3039/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pxexow3039/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/9/14/n9631692.htm">黑户宝宝近2万名？ 台内政部：仅543人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/9/14/n9631692.htm">黑户宝宝近2万名？ 台内政部：仅543人</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/pxexow3039/djy/blob/master/gb/17/9/14/n9631692.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pxexow3039/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pxexow3039/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pxexow3039/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pxexow3039/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxexow3039/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/17/9/14/n9631692.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
